[workspace]
resolver = "3"
members = [ "bin/arb", "crates/logger", "crates/object-pool", "crates/shio", "crates/utils", "crates/version",
]

[workspace.dependencies]
mev-logger = { path = "crates/logger" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
sui-sdk = { git = "https://github.com/KohTseh/mevsui" }
sui-types = { git = "https://github.com/KohTseh/mevsui" }
move-core-types = { git = "https://github.com/KohTseh/mevsui" }
shared-crypto = { git = "https://github.com/KohTseh/mevsui" }

eyre = "0.6.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
reqwest = { version = "0.12", features = ["json"] }
burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "8bdb3cadf18e9be01622f9acbe562ee2d4f65ac2", default-features = false, features = [
    "telegram",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3.6"
serde = { version = "1.0.144", features = ["derive", "rc",] }
serde_json = { version = "1.0.95", features = ["unbounded_depth"] }
futures = "0.3.28"
bcs = "0.1.6"
async-channel = "2.1"